--- a/docker-image/rsync-deploy/fs-overlay/etc/nginx/nginx.conf
+++ b/docker-image/rsync-deploy/fs-overlay/etc/nginx/nginx.conf
@@ -18,6 +18,13 @@ http {
         server_name  _;
 
         location / {
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+            add_header Access-Control-Allow-Headers 'Range,DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
         }
     }
 
