--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "2222:22"
       - "9080:80"
     environment:
-    # http://172.16.18.99/malik.l.keys
-      DEPLOY_KEY_URL: https://github.com/stoneli88.keys
+    # https://github.com/stoneli88.keys
+      DEPLOY_KEY_URL: http://172.16.18.99/malik.l.keys
     volumes:
       - rsync:/rsync
   redis:
