--- a/docker-image/rsync-deploy/docker-compose.yml
+++ b/docker-image/rsync-deploy/docker-compose.yml
@@ -4,4 +4,4 @@ rsync-deploy:
     - "2222:22"
     - "8080:80"
   environment:
-    DEPLOY_KEY_URL: https://github.com/steveltn.keys
+    DEPLOY_KEY_URL: https://github.com/stoneli88.keys
